--- a/node/member/public/mystyle.css
+++ b/node/member/public/mystyle.css
@@ -1,31 +1,125 @@
-/* mystyle.css */
 body {
-    background-color: lightcyan;
-    color: mediumslateblue;
-    margin-left: 30px;
-    margin-right: 30px;
+    text-align: center;
+    background-color: rgb(12, 20, 254);
+    font: bold 19px monospace, sans-serif;
+    background-image: url(bonobono.png);
 }
 
-h3 {
 
-    color: mediumslateblue;
+
+h3 {
+    text-align: center;
+    color: rgb(18, 41, 222);
+    margin-left: 30px;
+    font-size: 50px;
+}
+
+h2 {
+    text-align: center;
+    color: rgb(18, 41, 222);
+    margin-left: 30px;
+    font-size: 50px;
+}
+
+
+hr {
+
+    border: 5px solid rgba(11, 19, 255, 0.872);
+
+}
+
+form {
+    margin: auto;
 }
 
 input {
+    color: rgba(11, 19, 255, 0.872);
 
-    color: mediumslateblue;
     font-size: 15px;
 }
 
 button {
 
-    color: mediumslateblue;
+    background-color: rgba(14, 6, 254, 0.934);
+    border: 1px groove rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+    width: 120px;
+    height: 30px;
+    padding: 5px;
     font-size: 15px;
 }
 
 a {
+    font-family: monospace;
+    font-size: 18px;
+    color: #ffffff;
 
-    font-style: initial;
-    font-size: 20px;
+}
 
+input[type="text"] {
+    background-color: rgb(255, 255, 255);
+    border: 1px groove rgb(0, 0, 0);
+
+}
+
+input[type="password"] {
+    background-color: rgb(255, 255, 255);
+    border: 1px groove rgb(0, 0, 0);
+}
+
+input[type="submit"] {
+    background-color: rgba(255, 255, 255, 0.945);
+    border: 1px groove black;
+    width: 80px;
+    height: 30px;
+    padding: 5px;
+}
+
+input[type="reset"] {
+    background-color: rgba(255, 255, 255, 0.945);
+    border: 1px groove black;
+    width: 80px;
+    height: 30px;
+    padding: 5px;
+}
+
+input[type="button"] {
+    background-color: rgb(92, 48, 252);
+    border: 1px groove black;
+    width: 120px;
+    height: 30px;
+    padding: 5px;
+}
+
+div.box {
+    text-align: center;
+    background: rgba(136, 136, 90, 0.109);
+    border-style: solid;
+    border-color: rgb(24, 89, 252);
+    border-radius: 30px;
+
+
+    margin: 40px;
+    border-width: 30px;
+    padding: 20px;
+}
+
+div.box-inner {
+
+    border-style: none;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+}
+
+div.noround {
+
+    border-style: solid;
+    border-color: peru;
+    width: 350px;
+    height: 180px;
+
+    margin: 70px;
+    border-width: 1px;
+    padding: 50px;
 }
