--- a/node/member/public/mystyle.css
+++ b/node/member/public/mystyle.css
@@ -6,7 +6,7 @@ body {
 }
 
 
-
+/*h3 글씨 */
 h3 {
     text-align: center;
     color: rgb(18, 41, 222);
@@ -14,7 +14,16 @@ h3 {
     font-size: 50px;
 }
 
+/*h2 글씨 */
 h2 {
+    text-align: center;
+    color: rgb(18, 41, 222);
+    margin-left: 30px;
+    font-size: 50px;
+}
+
+/*h1 글씨 */
+h1 {
     text-align: center;
     color: rgb(18, 41, 222);
     margin-left: 30px;
@@ -32,8 +41,9 @@ form {
     margin: auto;
 }
 
+/* 버튼 내부에 글씨 */
 input {
-    color: rgba(11, 19, 255, 0.872);
+    color: rgba(10, 15, 171, 0.872);
 
     font-size: 15px;
 }
@@ -49,10 +59,11 @@ button {
     font-size: 15px;
 }
 
+/* /index 창 회원가입 */
 a {
     font-family: monospace;
     font-size: 18px;
-    color: #ffffff;
+    color: #210fe6;
 
 }
 
@@ -91,8 +102,10 @@ input[type="button"] {
     padding: 5px;
 }
 
+
+/* index 테두리 박스 */
 div.box {
-    text-align: center;
+
     background: rgba(136, 136, 90, 0.109);
     border-style: solid;
     border-color: rgb(24, 89, 252);
