--- a/node/member/public/mystyle.css
+++ b/node/member/public/mystyle.css
@@ -1,10 +1,43 @@
 body {
     text-align: center;
     background-color: rgb(12, 20, 254);
-    font: bold 19px monospace, sans-serif;
+    font: bold 25px monospace, sans-serif;
     background-image: url(bonobono.png);
 }
 
+/*상단 메뉴 */
+
+menubar {
+    background: rgb(18, 22, 241);
+}
+
+menubar ul {
+    /* 여백과 패딩 모두 0 */
+    margin: 20px;
+    padding: 20px;
+    width: 100%;
+    /* 모든 아이템(<li>)을 한 줄에 품을 수 있는 폭 */
+}
+
+menubar ul li {
+    display: inline-block;
+    /* 새 줄로 넘어가지 않게 */
+    list-style-type: none;
+    /* 마커 삭제 */
+    padding: 0px 15px;
+    /* top=bottom=0, left=right=15px */
+}
+
+menubar ul li a {
+    color: white;
+    text-decoration: none;
+    /* 링크 보이지 않게 */
+}
+
+menubar ul li a:hover {
+    color: rgb(57, 167, 246);
+    /* 마우스 올라 갈 때 색 */
+}
 
 /*h3 글씨 */
 h3 {
@@ -125,7 +158,7 @@ div.box-inner {
     padding: 10px;
 }
 
-div.noround {
+/*div.noround {
 
     border-style: solid;
     border-color: peru;
@@ -135,4 +168,4 @@ div.noround {
     margin: 70px;
     border-width: 1px;
     padding: 50px;
-}
+}*/
